Added `VerboseMode.SILENT` to benchmark debug mode