@@ -28,33 +28,34 @@ public class JmhRunner {
 
     /** enables debugging and assertions for benchmarks and production code - the speed results will be totally unreliable */
     public static void runDebug(Array<Class<?>> groups) {
-        runAndReport(groups, 0, 1, 1, 0, PrintGc.Disable, Assertions.Enable);
+        runAndReport(groups, 0, 1, 1, 0, VerboseMode.SILENT, Assertions.Enable);
     }
 
     @SuppressWarnings("unused")
     public static void runQuick(Array<Class<?>> groups) {
-        runAndReport(groups, 10, 10, 10, 1, PrintGc.Disable, Assertions.Disable);
+        runAndReport(groups, 10, 10, 10, 1, VerboseMode.NORMAL, Assertions.Disable);
     }
 
     @SuppressWarnings("unused")
     public static void runNormal(Array<Class<?>> groups) {
-        runAndReport(groups, 15, 10, 100, 1, PrintGc.Disable, Assertions.Disable);
+        runAndReport(groups, 15, 10, 100, 1, VerboseMode.NORMAL, Assertions.Disable);
     }
 
     @SuppressWarnings("unused")
     public static void runSlow(Array<Class<?>> groups) {
-        runAndReport(groups, 15, 15, 300, 1, PrintGc.Enable, Assertions.Disable);
+        runAndReport(groups, 15, 15, 300, 1, VerboseMode.EXTRA, Assertions.Disable);
     }
 
-    public static void runAndReport(Array<Class<?>> groups, int warmupIterations, int measurementIterations, int millis, int forks, PrintGc printGc, Assertions assertions) {
+    public static void runAndReport(Array<Class<?>> groups, int warmupIterations, int measurementIterations, int millis, int forks, VerboseMode silent, Assertions assertions) {
         final Array<String> classNames = groups.map(Class::getCanonicalName);
-        final Array<RunResult> results = run(classNames, warmupIterations, measurementIterations, millis, forks, printGc, assertions);
+        final Array<RunResult> results = run(classNames, warmupIterations, measurementIterations, millis, forks, silent, assertions);
         BenchmarkPerformanceReporter.of(classNames, results).print();
     }
 
-    private static Array<RunResult> run(Array<String> classNames, int warmupIterations, int measurementIterations, int millis, int forks, PrintGc printGc, Assertions assertions) {
+    private static Array<RunResult> run(Array<String> classNames, int warmupIterations, int measurementIterations, int millis, int forks, VerboseMode verboseMode, Assertions assertions) {
         final ChainedOptionsBuilder builder = new OptionsBuilder()
                 .shouldDoGC(true)
+                .verbosity(verboseMode)
                 .shouldFailOnError(true)
                 .mode(Mode.Throughput)
                 .timeUnit(TimeUnit.SECONDS)
@@ -65,7 +66,7 @@ public class JmhRunner {
                 .forks(forks)
                 // We are using 4Gb and setting NewGen to 100% to avoid GC during testing.
                 // Any GC during testing will destroy the iteration, which should get ignored as an outlier
-                .jvmArgsAppend("-XX:+UseG1GC", "-Xss100m", "-Xms4g", "-Xmx4g", "-XX:MaxGCPauseMillis=1000", "-XX:+UnlockExperimentalVMOptions", "-XX:G1NewSizePercent=100", "-XX:G1MaxNewSizePercent=100", printGc.vmArg, assertions.vmArg);
+                .jvmArgsAppend("-XX:+UseG1GC", "-Xss100m", "-Xms4g", "-Xmx4g", "-XX:MaxGCPauseMillis=1000", "-XX:+UnlockExperimentalVMOptions", "-XX:G1NewSizePercent=100", "-XX:G1MaxNewSizePercent=100", assertions.vmArg);
 
         classNames.forEach(builder::include);
 
@@ -73,17 +74,6 @@ public class JmhRunner {
             return Array.ofAll(new Runner(builder.build()).run());
         } catch (Exception e) {
             throw new RuntimeException(e.getMessage(), e);
-        }
-    }
-
-    public enum PrintGc {
-        Enable("-XX:+PrintGC"),
-        Disable("-XX:-PrintGC");
-
-        final String vmArg;
-
-        PrintGc(String vmArg) {
-            this.vmArg = vmArg;
         }
     }
 
